// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/folder-list/FolderListItem should be selectable 1`] = `
.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c9 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
}

.c9:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c9:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c9:disabled {
  color: #c0c0c0;
}

.c5 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c5:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c5:disabled {
  color: #c0c0c0;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: 30px;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  width: 20px;
  height: 20px;
  border: 2px solid #222;
  color: #222;
  background: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2:hover {
  background-color: #fcfcfc;
}

.c2:focus-within {
  outline: 1px dotted #222;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  opacity: 0;
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 5px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1"
      >
        <label
          class="c2"
          for="checkbox-1"
        >
          ✔
          <input
            checked=""
            class="c3"
            id="checkbox-1"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <a
      class="c4"
      href="/folder/0"
    >
      Test folder
    </a>
    <div
      class=""
    >
      <a
        class="c5"
        href="/folder/0"
      >
        <i
          class="c6"
        >
          ✎
        </i>
        <span
          class="c7"
        >
          Upravit
        </span>
      </a>
    </div>
    <div
      class=""
    >
      <button
        class="c8 c9"
        type="button"
      >
        <i
          class="c6"
        >
          ✖
        </i>
        <span
          class="c7"
        >
          Smazat
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/folder-list/FolderListItem should render correctly 1`] = `
.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c9 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
}

.c9:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c9:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c9:disabled {
  color: #c0c0c0;
}

.c5 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c5:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c5:disabled {
  color: #c0c0c0;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: 30px;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  width: 20px;
  height: 20px;
  border: 2px solid #222;
  color: #222;
  background: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2:hover {
  background-color: #fcfcfc;
}

.c2:focus-within {
  outline: 1px dotted #222;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  opacity: 0;
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 5px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1"
      >
        <label
          class="c2"
          for="checkbox-0"
        >
          <input
            class="c3"
            id="checkbox-0"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <a
      class="c4"
      href="/folder/0"
    >
      Test folder
    </a>
    <div
      class=""
    >
      <a
        class="c5"
        href="/folder/0"
      >
        <i
          class="c6"
        >
          ✎
        </i>
        <span
          class="c7"
        >
          Upravit
        </span>
      </a>
    </div>
    <div
      class=""
    >
      <button
        class="c8 c9"
        type="button"
      >
        <i
          class="c6"
        >
          ✖
        </i>
        <span
          class="c7"
        >
          Smazat
        </span>
      </button>
    </div>
  </div>
</div>
`;
